--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,15 +3,13 @@
 name: Build
 
 # Controls when the action will run.
-on: [push, pull_request]
-  # Triggers the workflow on push or pull request events but only for the master branch
-  #push:
-  #  branches: [ * ]
-  #pull_request:
-  #  branches: [ * ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: 
+  push:
+    paths-ignore:
+    - 'docs/**'
+  pull_request:
+    paths-ignore:
+    - 'docs/**'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
